# ai-for-modern-cpp

./: .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.agents/: README.md
.agents/skills/source-command-add-module/: SKILL.md
.agents/skills/source-command-design-qt-quick-ui/: SKILL.md
.agents/skills/source-command-implement/: SKILL.md
.agents/skills/source-command-reflect/: SKILL.md
.agents/skills/source-command-release/: SKILL.md
.agents/skills/source-command-review/: SKILL.md
.agents/skills/source-command-start-project/: SKILL.md
.agents/skills/source-command-start-project/agents/: openai.yaml
.agents/skills/source-command-test/: SKILL.md
.claude/commands/: add-module.md  design-qt-quick-ui.md  implement.md  reflect.md  release.md  review.md  start-project.md  test.md
.github/workflows/: ci.yml
cmake/: AimcppImportStd.cmake  AimcppProjectChecks.cmake
docs/: MCP.md  REVIEW.md
docs/agent/: API_DESIGN.md  ARCHITECTURE.md  CMAKE_AND_TOOLCHAINS.md  COMMON_FAILURES.md  ERRORS_AND_RESOURCES.md  MODULES.md  NAMING.md  PATTERNS.md  PLATFORM_BOUNDARIES.md  PROJECT_CMAKE_BASELINE.md  QT_QUICK_UI.md  README.md  START_PROJECT.md  SYNTAX_AND_STYLE.md  TESTING_AND_VERIFICATION.md
evals/: README.md  implementation.md  project_initiation.md  reflection.md  review.md  toolchains.md  ui_and_syntax.md
scripts/: bootstrap-linux-cmake.sh  verify-linux.sh
src/: main.cpp
src/modern_cpp_agent/: modern_cpp_agent.cpp  modern_cpp_agent.cppm
tests/: core_tests.cpp  import_std_metadata.cmake  knowledge_contract.cmake  project_checks.cmake  qt_quick_baseline_integration.cmake
tests/fixtures/qt_quick_baseline/: CMakeLists.txt
tests/fixtures/qt_quick_baseline/src/bootstrap/: main.cpp
tests/fixtures/qt_quick_baseline/src/domain/: app_domain.cpp  app_domain.cppm
tests/fixtures/qt_quick_baseline/src/presentation/: app_view_model.cpp  app_view_model.hpp
tests/fixtures/qt_quick_baseline/tests/: app_tests.cpp
tests/fixtures/qt_quick_baseline/ui/: Main.qml
tests/fixtures/qt_quick_baseline/ui/components/: PrimaryActionButton.qml  StatusPanel.qml
tests/fixtures/qt_quick_baseline/ui/pages/: HomePage.qml
tests/fixtures/qt_quick_baseline/ui/theme/: Theme.qml
